--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p class="two" id="greetingText">kk sayang sama kamu, njir Malu hahaha</p>
     </div>
     <div class="three">
-      <p>Ini hari ulang tahunmu!!! :D (maaf kalau telat yah)</p>
+      <p>Ini hari ulang tahunmu!!! :D (maaf kalau kecepetan yah haha)</p>
     </div>
     <div class="four">
       <div class="text-box">
@@ -43,11 +43,11 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/andin.jpg" alt="" class="lydia-dp" id="imagePath">
+      <img src="img/aya.jpg" alt="" class="lydia-dp" id="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">Semoga aku selalu bersamamu sayang ku Andin ;)</h5>
+        <h5 id="wishText">Semoga aku selalu bersamamu sayang ku Hajida ;)</h5>
       </div>
     </div>
     <div class="seven">
@@ -117,7 +117,7 @@
       </svg>
     </div>
     <div class="nine">
-      <p>Kamu suka kan Sayang, maaf ya kalau aa terlalu lebay wkwk.</p>
+      <p>Kamu suka kan Sayang, maaf ya kalau aku terlalu lebay wkwk.</p>
       <p id="replay">Atau klik, jika kamu ingin menontonnya lagi.</p>
       <p class="last-smile">:)</p>
     </div>
