--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       <h1 class="one">Hey
         <span id="name">Sayang</span>
       </h1>
-      <p class="two" id="greetingText">kk sayang sama kamu, njir Malu hahaha</p>
+      <p class="two" id="greetingText">aku sayang sama kamu, njir malu hahaha</p>
     </div>
     <div class="three">
-      <p>Ini hari ulang tahunmu!!! :D (maaf kalau kecepetan yah haha)</p>
+      <p>Ini hari ulang tahunmu!!! :D (maaf kalau terlambat yang)</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Selamat ulang tahun sayang!! Yeeyyy! Bahagia Selalu ya sayangku</p>
+        <p class="hbd-chatbox">Selamat ulang tahun sayang!! Yeeyyy! Bahagia selalu ya sayangku</p>
         <p class="fake-btn">Kirim</p>
       </div>
     </div>
@@ -43,11 +43,11 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/aya.jpg" alt="" class="lydia-dp" id="imagePath">
+      <img src="img/mela.jpg" alt="" class="lydia-dp" id="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">Semoga aku selalu bersamamu sayang ku Hajida ;)</h5>
+        <h5 id="wishText">Semoga aku selalu bersamamu sayang ku Mela :)</h5>
       </div>
     </div>
     <div class="seven">
